# PushLog

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .semgrepignore  Cargo.toml  DEPLOYMENT_SETUP.md  Dockerfile  Dockerfile.production  Dockerfile.promote  Dockerfile.streaming-stats  LICENSE  ORGANIZATION_README.md  PERFORMANCE-TESTING.md  README.md  add-indexes.js  add-performance-indexes.sql  ai-performance-test.js  check-ai-models.js  database-performance.js  deploy-production.sh  deploy.sh  docker-compose.prebuilt.yml  docker-compose.production.yml  docker-compose.promote.yml  docker-compose.staging.yml  docker-compose.staging.yml.fix  drizzle.config.ts  ecosystem.config.cjs  ecosystem.config.js  enable-leaked-password-protection.js  fix-ai-integration.js  fix-all-issues.js  fix-rate-limiting.js  fix-supabase-security.js  get-supabase-credentials.js  jest.config.js  load-test.js  (+22 more)
.github/workflows/: ci.yml  db-performance.yml  dependency-review.yml  deploy-staging.yml  risk-engine.yml  security.yml  zap-staging.yml
agent/: Dockerfile  Makefile  go.mod
agent/cmd/: main.go
agent/deploy/: install.sh  (+1 more)
carter.pushlog.ai/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
client/: .env.local  index.html
config/: README.md  pushlog-agent.production.yaml
docs/: AGENT_TESTING.md  INCIDENT_NOTIFICATION_PLAN.md  INCIDENT_NOTIFICATION_TARGETING_PLAN.md  PERF_TESTING.md  PLAN_TODAY.md  PUSHLOG_AGENT_GO.md  PUSHLOG_AGENT_PLAN.md  RLS_SUPABASE.md  ROADMAP.md  ROLE_PERMISSIONS_DEVELOPER_VIEWER.md  SENTRY_SETUP.md  SOLO_VS_TEAM_DRAFT.md  STAGING.md  github-issue-slack-invite.md  nginx-pushlog.conf
launch/: LAUNCH-CHECKLIST.md  README.md  deploy-to-production.sh  ecosystem.config.js  nginx-deployment-guide.md
migrations/: 0000_ancient_blackheart.sql  0001_timestamp_fixes.sql  0001_volatile_quasimodo.sql  0002_fix_defaults.sql  0004_add_email_verification.sql  0005_add_notifications_table.sql  0006_add_monitor_all_branches.sql  0007_add_ai_summary_fields.sql  0008_add_ai_credits_and_stripe.sql  0009_add_slack_workspace_id_to_integrations.sql  0010_create_user_sessions_table.sql  0011_migrate_gpt5_to_gpt4o.sql  0012_fix_push_events_sequence.sql
scripts/: TEST-SIMULATE-PUSH.md  backfill-organizations.ts  backup-db.js  build-for-docker.sh  docker-production-up.sh  docker-staging-up.sh  lib-rust-incremental.sh  promote-http-server.js  promote-production-docker.sh  run-prod-migrations.sh  test-endpoint-timing.sh  test-endpoint-timing.ts  test-incident-engine.sh  test-sentry-webhook.sh
server/: accountLoginLimit.ts  ai.ts  aiCost.ts  billing.ts  database.ts  email.ts  encryption.ts  github.ts  githubWebhook.ts  google.ts  incidentEngine.ts  index.ts  jwt.ts  orgStripeSubscriptionSync.ts  package-lock.json  package.json  pricing.ts  productionDeployClient.ts  pushDiffEnrichment.ts  pushlogModes.ts  riskEngine.ts  routes.ts  sentryWebhook.ts  slack-commands.ts  slack.ts  static.ts  storage.ts  streamingStats.ts  stripe.ts  stripeSubscriptionPeriod.ts  types.ts  vite.ts
server/incident-engine/: Cargo.toml  README.md  rustfmt.toml
server/incident-engine/fixtures/: single_event.jsonl
server/incident-engine/src/: config.rs  correlation.rs  engine.rs  error.rs  fingerprint.rs  lib.rs  main.rs  normalize.rs  stats.rs  types.rs
server/incident-engine/tests/: integration.rs
server/risk-engine/: Cargo.toml  README.md
server/risk-engine/src/: change_type.rs  lib.rs  main.rs  risk.rs  score.rs  types.rs
server/streaming-stats/: Cargo.toml  README.md
server/streaming-stats/src/: date.rs  handlers.rs  lib.rs  main.rs  state.rs  types.rs
shared/: schema.ts
(+130 files in other folders)
