# PushLog Streaming Stats Engine
#
# Ingests push events via HTTP, updates user_daily_stats aggregates (pushes_today,
# pushes_last_7_days, total_risk_today, per_repo_daily_counts) in PostgreSQL.
# No heavy aggregation at request time for the dashboard.

[package]
name = "streaming-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
